List methods added

--- a/PythonStringMethods.ipynb
+++ b/PythonStringMethods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
    "source": [
     "lang1='python'\n",
     "lang2=\"C++\"\n",
-    "# strings can be represented in python using ' ' as well as \"\"\n",
+    "# strings can be represented in python using ' ' as well as \" \"\n",
     "print(lang1,lang2,sep=\" , \")\n",
     "# sep seperates the strings(outputs) using the specified symbol\n",
     "print(len(lang1),len(lang2),sep=\" - \")"
@@ -488,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
