updated list and tuple

--- a/ListMethods.ipynb
+++ b/ListMethods.ipynb
@@ -242,6 +242,65 @@
     "# l and m are not modified\n",
     "print(k)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23, 56, 89, 12, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [23,56,89,12,4,990]\n",
+    "list.pop()  # removes the last element\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45, 68, 90]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list=[23,45,68,90]\n",
+    "list.pop(0) # removes the element at the specified index\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 56, 85.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[33,56,\"hello\",85.25]\n",
+    "l.remove(\"hello\")\n",
+    "# searches and removes the first occurence of the element if found\n",
+    "# if element not found, it throws an error\n",
+    "print(l)"
+   ]
   }
  ],
  "metadata": {
