--- a/Tuple.ipynb
+++ b/Tuple.ipynb
@@ -116,6 +116,134 @@
     "# tuple can contain multiple datatypes\n",
     "print(tup)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 3, 5, 7, 9, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup=(1,3,5,7,13,11,19)\n",
+    "# to manipulate a tuple, we have to convert it into a list\n",
+    "# then make the required changes and convert it back to a tuple\n",
+    "temp=list(tup)\n",
+    "temp.pop()\n",
+    "temp[4]=9\n",
+    "tup=tuple(temp)\n",
+    "print(tup)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 4, 6, 8, 10, 12, 14, 16)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# we can concatenate two tuples without converting them to lists as we are not modifying the list \n",
+    "# but creating a new one\n",
+    "t1=(2,4,6,8)\n",
+    "t2=(10,12,14,16)\n",
+    "t3=t1+t2\n",
+    "print(t3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup=(1,4,6,1,7,0,1,45,6,7,102)\n",
+    "freq=tup.count(1)\n",
+    "# returns the number of occurences of the specified element in the tuple\n",
+    "print(freq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "ind=tup.index(6)\n",
+    "# returns the index of the first occurence of the specified element\n",
+    "# throws error if the value is not present in the tuple\n",
+    "print(ind)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "tup=(2,6,78,90,34,6,89,120)\n",
+    "ind2=tup.index(6,3,7)\n",
+    "# returns the index of the first occurence of the specified element in the specified range\n",
+    "# throws error if the value is not present in the tuple\n",
+    "# here it searches 6 in the tuple from index 4 to 8 and returns the index of the first occurence\n",
+    "print(ind2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1=(23,678,54,30,58,88)\n",
+    "size=len(t1)\n",
+    "# returns the length of the tuple\n",
+    "print(size)"
+   ]
   }
  ],
  "metadata": {
@@ -134,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
